See Text button and button black

--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,14 @@
 <link rel="stylesheet" href="styles.css">
 <body>
   <h1>My Notes</h1>
-  
+  <!--node server.js-->
   <input type="text" id="noteInput" placeholder="Write a note" />
   <button onclick="addNote()">Save</button>
   <div id ="noteBox"></div>
   <ul id="notesList" ></ul>
   </div>
+
+  <button onclick="binaryNote()"><p id="test">See Date/Time</p></button>
   <script src="script.js"></script>
 </body>
 </html>
