--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,11 @@
   </div>
 
   <button onclick="binaryNote()"><p id="test">See Date/Time</p></button>
+
+  <footer>
+  <p>© 2025 Cano development. All rights reserved.</p> 
+  </footer>
+
   <script src="script.js"></script>
 </body>
 </html>
